--- a/seh 2.html
+++ b/seh 2.html
@@ -9,6 +9,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>Salam</h1>
+    <h1>Sagol</h1>
+    <h2><a href="index.html">Bura bas</a></h2>
 </body>
 </html>
