--- a/seh 2.html
+++ b/seh 2.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <h1>Sagol</h1>
-    <h2><a href="index.html">Bura bas</a></h2>
+    <h2><a href="index">Bura bas</a></h2>
 </body>
 </html>
