--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
     <h1>Salam</h1>
     <h1>yox</h1>
-    <h2><a href="seh 2.html">Bura bas</a></h2>
+    <h2><a href="seh 2">Bura bas</a></h2>
 </body>
 </html>
